Rysowanie zolwi, wyswietlanie danych na ich temat, przygotowanie typow instrukcji i bledow

--- a/atari/imgui.ini
+++ b/atari/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Input]
-Pos=6,27
-Size=650,111
+Pos=2,1
+Size=536,91
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=116,118
 Size=400,400
+Collapsed=0
+
+[Window][tabela]
+Pos=62,179
+Size=362,333
+Collapsed=0
+
+[Window][ATARI]
+Pos=2,92
+Size=536,286
 Collapsed=0
 
