Konsola interpretera, naprawa bledow interpretera

--- a/atari/imgui.ini
+++ b/atari/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Input]
-Pos=10,29
-Size=471,95
+Pos=10,30
+Size=494,95
 Collapsed=0
 
 [Window][ATARI]
 Pos=12,130
 Size=304,169
+Collapsed=0
+
+[Window][Konsola interpretera]
+Pos=917,37
+Size=340,100
 Collapsed=0
 
