Zmiana UI, dodanie przycisku do robienia screenshotow, naprawa bledu w interpreterze

--- a/atari/imgui.ini
+++ b/atari/imgui.ini
@@ -3,18 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Input]
-Pos=10,30
-Size=494,95
-Collapsed=0
-
-[Window][ATARI]
-Pos=12,130
-Size=304,169
-Collapsed=0
-
-[Window][Konsola interpretera]
-Pos=917,37
-Size=340,100
+[Window][Atari Interpreter]
+Pos=0,576
+Size=1280,144
 Collapsed=0
 
