--- a/atari/imgui.ini
+++ b/atari/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,46
+Pos=60,60
 Size=400,400
 Collapsed=0
 
@@ -8,13 +8,13 @@ Pos=0,701
 Size=1600,175
 Collapsed=0
 
-[Window][Settings]
-Pos=137,52
-Size=621,138
+[Window][Ustawienia]
+Pos=60,60
+Size=517,140
 Collapsed=0
 
 [Window][Logger]
-Pos=60,60
-Size=374,207
+Pos=660,61
+Size=462,149
 Collapsed=0
 
